Fix image/video sizing (prevent overflow on small devices)

--- a/_assets/styles/global.css
+++ b/_assets/styles/global.css
@@ -369,3 +369,8 @@ h6,
   /* May cause issues in Windows browsers */
   text-rendering: optimizeLegibility;
 }
+
+img,
+video {
+  width: auto;
+}
